design and text changes to website

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 
 <p class="jobTitle">Software Engineering Intern - Visa Inc </p>
 <li>Designed and integrated a calendar web application for a file conversion manager using the requirements of pure HTML and CSS, converted to JavaScript, to visualize data retrieved from back-end Java code.</li>
-<li>Improved workflow by creating a tool to search through Ab Initio files and automate the retrieval of the initialization value of any desired variable.</li>
-<li>Focused on use of Java Reflections API for a settings program.</li>
+<li>Improved workflow by creating a tool that automates the search through Ab Initio-based files and retrieves the initialization value of any desired variable.</li>
+<li>Focused on use of Java Reflections API for a configurations program.</li>
 <p class="jobTitle">Communication Specialist Assistant - University of Miami</p>
 <li>Designed posters, digital signage using Photoshop and InDesign for University of Miami. Approved digital signage submissions from students.</li>
 <p class="jobTitle">Hostess/Manager Assistant - Balan's Restaurant</p>
@@ -92,7 +92,7 @@
 
 <div id="bio">
 <p> Hey! Thank you for stopping by.</p>
-<p class="tab"> I'm Machie, an undergraduate at the University of Miami, graduating Spring 2019, pursuing a BS in Computer Science with a minor in Math and Communications-concentration in Web Design. When I'm not coding, I enjoy long walks on the beach, logic puzzles, traveling, and eating. </p><p class="tab">I am looking for job opportunities that will allow me to expand my skills and knowledge as a software engineer; as I am new to the industry, I am very eager to explore the different roles in the field.  Currently, I am paricularly interested in a position in App development or in Back-end development.   </p><p>Will work for tacos... never underestimate the power of tacos.</p>
+<p class="tab"> I'm Machie, an undergraduate at the University of Miami, graduating Spring 2019, pursuing a BS in Computer Science with a minor in Math and Communications-concentration in Web Design. When I'm not coding, I enjoy long walks on the beach, logic puzzles, traveling, and eating. </p><p class="tab">I am looking for job opportunities that will allow me to expand my skills and knowledge as a software engineer; as I am new to the industry, I am very eager to explore the different roles in the field. Currently, I am particularly interested in a position in App development or in Back-end development.   </p><p>Will work for tacos... never underestimate the power of tacos.</p>
 </div>
 
 
