--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
 <p class="jobTitle">Hostess/Manager Assistant - Balan's Restaurant</p>
 <li>Devised and rendered calculations, charts, tabling, indexes via Word and Excel. Helped repair electronic devices when malfunctioned.</li>
 </div>
+
 </div>
 
 <div id="me">
@@ -92,15 +93,16 @@
 
 <div id="bio">
 <p> Hey! Thank you for stopping by.</p>
-<p class="tab"> I'm Machie, an undergraduate at the University of Miami, graduating Spring 2019, pursuing a BS in Computer Science with a minor in Math and Communications-concentration in Web Design. When I'm not coding, I enjoy long walks on the beach, logic puzzles, traveling, and eating. </p><p class="tab">I am looking for job opportunities that will allow me to expand my skills and knowledge as a software engineer; as I am new to the industry, I am very eager to explore the different roles in the field. Currently, I am particularly interested in a position in App development or in Back-end development, that delves in to applications of AI/machine learning. </p><p>Will work for tacos... never underestimate the power of tacos.</p>
+<p class="tab"> I'm Machie, an undergraduate at the University of Miami, graduating Spring 2019, pursuing a BS in Computer Science with a minor in Math and Communications - concentration in Web Design. When I'm not coding, I enjoy long walks on the beach, logic puzzles, traveling, and eating. </p><p class="tab">I am looking for job opportunities that will allow me to expand my skills and knowledge as a software engineer; as I am new to the industry, I am very eager to explore the different roles in the field. Currently, I am particularly interested in a position in App development or in Back-end development, that delves in to applications of AI/machine learning.   </p><p>Will work for tacos... never underestimate the power of tacos.</p>
 </div>
 
 
 
 
     <ul id="contact">
+      <li>Read my: <a id="cv" href="https://drive.google.com/open?id=1tIdhMwqf2xH1HJ6Aq0rX2BlePKVXFCEF">Résumé</a></li>
       <li>Find me: &nbsp;Miami, FL</li>
-          <li>Reach me:&nbsp; m.tabaru@umiami.edu</li>
+      <li>Reach me:&nbsp; m.tabaru@umiami.edu</li>
     </ul>
 
 
