update to introduction

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
 <div id="bio">
 <p> Hey! Thank you for stopping by.</p>
-<p class="tab"> I'm Machie, an undergraduate at the University of Miami, graduating Spring 2019, pursuing a BS in Computer Science with a minor in Math and Communications - concentration in Web Design. When I'm not coding, I enjoy long walks on the beach, logic puzzles, traveling, and eating. </p><p class="tab">I am looking for job opportunities that will allow me to expand my skills and knowledge as a software engineer; as I am new to the industry, I am very eager to explore the different roles in the field. Currently, I am particularly interested in a position in App development or in Back-end development, that delves in to applications of AI/machine learning.   </p><p>Will work for tacos... never underestimate the power of tacos.</p>
+<p class="tab"> I'm Machie, a new graduate from the University of Miami with a BA in Computer Science with a minor in Math and Communications - concentration in Web Design. When I'm not coding, I enjoy long walks on the beach, logic puzzles, traveling, and eating. </p><p class="tab">I am looking for job opportunities that will allow me to expand my skills and knowledge as a software engineer; as I am new to the industry, I am very eager to explore the different roles in the field. Currently, I am particularly interested in a position in App development or in Back-end development, that delves in to applications of AI/machine learning.   </p><p>Will work for tacos... never underestimate the power of tacos.</p>
 </div>
 
 
