--- a/index.html
+++ b/index.html
@@ -92,7 +92,12 @@
 
 <div id="bio">
 <p> Hey! Thank you for stopping by.</p>
-<p class="tab"> I'm Machie, a new graduate from the University of Miami with a Bachelor's in Computer Science with a minor in Math and Communications - concentration in Web. When I'm not coding, I enjoy long walks on the beach, logic puzzles, traveling, and eating. </p><p class="tab">  </p><p>Will work for tacos... never underestimate the power of tacos.</p>
+<p class="tab"> I'm Machie, a new graduate from the University of Miami with a Bachelor's in Computer Science with a minor in Math and Communications. When I'm not coding, I enjoy long walks on the beach, logic puzzles, travelling, and eating. </p><p class="tab"> 
+ I'm currently looking for software engineering opportunities that will help me excel as an engineer. As much as I love to be clammed up on a date with the trfiling software bug (...jokes, no one likes that! ...Although solving one is one of the most gratifying aspects in coding, amirite?) I love interacting with others. 
+</p><p class="tab"> 
+ As trivial as that may sound, I hope to bring my communications skills into my career, and to help bridge any gaps in communication that we may have in this industry, to help make workflow run more efficiently, and I believe that I can be a great asset to a company.
+
+ </p>
 </div>
 
 
