--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
 
     <ul id="contact">
-      <li>Read my: <a id="cv" href="https://drive.google.com/open?id=1tIdhMwqf2xH1HJ6Aq0rX2BlePKVXFCEF">Résumé</a></li>
+      <li>Read me: <a id="cv" href="https://drive.google.com/open?id=1tIdhMwqf2xH1HJ6Aq0rX2BlePKVXFCEF">Résumé</a></li>
       <li>Find me: &nbsp;Miami, FL</li>
       <li>Reach me:&nbsp; m.tabaru@umiami.edu</li>
     </ul>
