--- a/index.html
+++ b/index.html
@@ -17,100 +17,99 @@
 <div id="top">
   <body>
        <nav>
-      <a href="#top"> HOME</a>
-      <a href="#second"> SKILLS </a>
-      <a href="#experience"> EXPERIENCE</a>
-          <a href="#me"> ABOUT ME</a>
-    </nav>
+        <a href="#top"> HOME</a>
+        <a href="#second"> SKILLS </a>
+        <a href="#experience"> EXPERIENCE</a>
+        <a href="#me"> ABOUT ME</a>
+      </nav>
+
       <header>
-      <h1> Hello World.  </h1>
-       </header>
+        <h1> Hello World.  </h1>
+      </header>
+
+
+              <div class="name">Machie Tabaru  </div>
+              <div class="pd"> Front/Back-End Developer</div>
+        <div id="quote"> in the making...</div>
+
+        </div>
+
+
+        <div id="second">
+        <div id="box">
+            <h2>Skills</h2>
+        </div>
+
+        <p id="firstword">  Java.</p>
+        <p>C.</p>
+        <p>Python.</p>
+        <p>JavaScript.</p>
+        <p>Android Programming.</p>
+        <p>HTML.</p>
+        <p>Photoshop.</p>
+        <p>InDesign.</p>
+        <p>Japanese.</p>
+        </div>
+
+        <div id="third">
+        <div class="fill">
+        </div>
+        <div class="clear">
+        </div>
+        <div class="fill">
+        </div>
+        <div class="clear">
+        </div>
+        <div class="fill">
+        </div>
+        </div>
+
+        <div id="experience">
+        <div id="vox">
+        <p id="designWords">Experience</p>
+        </div>
+         <div id="space">
+         </div>
+
+         <div id="work" style="overflow-y: scroll; height:80%">
+
+        <p class="jobTitle">Software Engineering Intern - Visa Inc </p>
+        <li>Designed and integrated a calendar web application for a file conversion manager using the requirements of pure HTML and CSS, converted to JavaScript, to visualize data retrieved from back-end Java code.</li>
+        <li>Improved workflow by creating a tool that automates the search through Ab Initio-based files and retrieves the initialization value of any desired variable.</li>
+        <li>Focused on use of Java Reflections API for a configurations program.</li>
+        <p class="jobTitle">Communication Specialist Assistant - University of Miami</p>
+        <li>Designed posters, digital signage using Photoshop and InDesign for University of Miami. Approved digital signage submissions from students.</li>
+
+        </div>
+
+        </div>
+
+        <div id="me">
+        <p id="speak"> Don't Speak Code?</p>
+        <p id="english"> I speak English too.</p>
+
+
+        <div id="bio">
+        <p> Hey! Thank you for stopping by.</p>
+        <p class="tab"> I'm Machie, a new graduate from the University of Miami with a Bachelor's in Computer Science with a minor in Math and Communications. When I'm not coding, I enjoy long walks on the beach, logic puzzles, travelling, and eating. </p><p class="tab"> 
+         I'm currently looking for software engineering opportunities that will help me excel as an engineer. As much as I love to be clammed up on a date with the trfiling software bug (...jokes, no one likes that! ...Although solving one is one of the most gratifying aspects in coding, amirite?) I love interacting with others. 
+        </p><p class="tab"> 
+         As trivial as that may sound, I hope to bring my communications skills into my career, and to help bridge any gaps in communication that we may have in this industry, to help make workflow run more efficiently.
+         </p>
+        </div>
 
 
 
 
-      <div class="name">Machie Tabaru  </div>
-      <div class="pd"> Front/Back-End Developer</div>
-<div id="quote"> in the making..</div>
-
-</div>
-
-
-<div id="second">
-<div id="box">
-  <h2>Skills</h2>
-</div>
-
-<p id="firstword">  Java.</p>
-<p>C.</p>
-<p>Python.</p>
-<p>JavaScript.</p>
-<p>Android Programming.</p>
-<p>HTML.</p>
-<p>Photoshop.</p>
-<p>InDesign.</p>
-<p>Japanese.</p>
-</div>
-
-<div id="third">
-<div class="fill">
-</div>
-<div class="clear">
-</div>
-<div class="fill">
-</div>
-<div class="clear">
-</div>
-<div class="fill">
-</div>
-</div>
-
-<div id="experience">
-<div id="vox">
-<p id="designWords">Experience</p>
-</div>
- <div id="space">
- </div>
-
- <div id="work" style="overflow-y: scroll; height:80%">
-
-<p class="jobTitle">Software Engineering Intern - Visa Inc </p>
-<li>Designed and integrated a calendar web application for a file conversion manager using the requirements of pure HTML and CSS, converted to JavaScript, to visualize data retrieved from back-end Java code.</li>
-<li>Improved workflow by creating a tool that automates the search through Ab Initio-based files and retrieves the initialization value of any desired variable.</li>
-<li>Focused on use of Java Reflections API for a configurations program.</li>
-<p class="jobTitle">Communication Specialist Assistant - University of Miami</p>
-<li>Designed posters, digital signage using Photoshop and InDesign for University of Miami. Approved digital signage submissions from students.</li>
-
-</div>
-
-</div>
-
-<div id="me">
-<p id="speak"> Don't Speak Code?</p>
-<p id="english"> I speak English too.</p>
-
-
-<div id="bio">
-<p> Hey! Thank you for stopping by.</p>
-<p class="tab"> I'm Machie, a new graduate from the University of Miami with a Bachelor's in Computer Science with a minor in Math and Communications. When I'm not coding, I enjoy long walks on the beach, logic puzzles, travelling, and eating. </p><p class="tab"> 
- I'm currently looking for software engineering opportunities that will help me excel as an engineer. As much as I love to be clammed up on a date with the trfiling software bug (...jokes, no one likes that! ...Although solving one is one of the most gratifying aspects in coding, amirite?) I love interacting with others. 
-</p><p class="tab"> 
- As trivial as that may sound, I hope to bring my communications skills into my career, and to help bridge any gaps in communication that we may have in this industry, to help make workflow run more efficiently.
- </p>
-</div>
+            <ul id="contact">
+              <li>Read me: <a id="cv" href="https://drive.google.com/open?id=1tIdhMwqf2xH1HJ6Aq0rX2BlePKVXFCEF">Résumé</a></li>
+              <li>Find me: &nbsp;Miami, FL</li>
+              <li>Reach me:&nbsp; m.tabaru@umiami.edu</li>
+            </ul>
 
 
 
-
-    <ul id="contact">
-      <li>Read me: <a id="cv" href="https://drive.google.com/open?id=1tIdhMwqf2xH1HJ6Aq0rX2BlePKVXFCEF">Résumé</a></li>
-      <li>Find me: &nbsp;Miami, FL</li>
-      <li>Reach me:&nbsp; m.tabaru@umiami.edu</li>
-    </ul>
-
-
-
-</div>
+        </div>
   </body>
 
 
