changes to about me, work, color n spacing

--- a/index.html
+++ b/index.html
@@ -73,12 +73,19 @@
 
          <div id="work" style="overflow-y: scroll; height:80%">
 
-        <p class="jobTitle">Software Engineering Intern - Visa Inc </p>
-        <li>Designed and integrated a calendar web application for a file conversion manager using the requirements of pure HTML and CSS, converted to JavaScript, to visualize data retrieved from back-end Java code.</li>
-        <li>Improved workflow by creating a tool that automates the search through Ab Initio-based files and retrieves the initialization value of any desired variable.</li>
-        <li>Focused on use of Java Reflections API for a configurations program.</li>
-        <p class="jobTitle">Communication Specialist Assistant - University of Miami</p>
-        <li>Designed posters, digital signage using Photoshop and InDesign for University of Miami. Approved digital signage submissions from students.</li>
+                 
+          <p class="jobTitle">Software Engineering Intern - Visa Inc </p>
+          <li>Optimized workflow by visualizing millions of live VISA transactional data through designing and
+          implementing a multi-layer calendar-view UI for a file conversion pipeline.</li>
+          <p class="tab"></p>
+          <li>Improved productivity by 12% by developing a tool that automates the parse through source files and retrieves the initialized value of specified attributes.
+          </li>
+          <p class="tab"></p>
+          <li>Integrated a configurations program that accessed variables and allotted changes to a program without having the need to interrupt the progress of the pipeline.</li>
+
+          <p class="jobTitle"> Digital Designer, Assistant - University of Miami</p>
+          <li>Designed posters and digital signage for newsletters and events for the University of Miami using
+          Photoshop and InDesign, and piloted signage designs from students.</li>
 
         </div>
 
