--- a/index.html
+++ b/index.html
@@ -1,123 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-        <meta charset="UTF-8" />
-        <title>Machie Tabaru Portfolio</title>
-
-<style>
-@import url(https://fonts.googleapis.com/css?family=Comfortaa:300|Domine|Fira+Sans:300i|Hind|Josefin+Sans|Karla:400i|Merriweather+Sans:300|Muli:300,400|News+Cycle|Noto+Sans|Pavanam|Poppins:300,400|Quattrocento|Raleway|Roboto|Source+Sans+Pro|Ubuntu:300|Vollkorn);
-@import url(https://fonts.googleapis.com/css?family=Playfair+Display:400,400italic,700|Cookie|Playball|Sail);
-
-</style>
-
-    <meta name="viewport" content="width=device-width; initial-scale=1.0;" />
-      <link href="style.css" rel="stylesheet" media="screen" />
-  </head>
-
-<div id="top">
-  <body>
-       <nav>
-        <a href="#top"> HOME</a>
-        <a href="#second"> SKILLS </a>
-        <a href="#experience"> EXPERIENCE</a>
-        <a href="#me"> ABOUT ME</a>
-      </nav>
-
-      <header>
-        <h1> Hello World.  </h1>
-      </header>
 
 
-              <div class="name">Machie Tabaru  </div>
-              <div class="pd"> Front/Back-End Developer</div>
-        <div id="quote"> in the making...</div>
+	<head>
+	    <meta charset="UTF-8"/>
+		<title>Machie Tabaru Portfolio</title>
+
+		<style>
+			@import url(https://fonts.googleapis.com/css?family=Comfortaa:300|Domine|Fira+Sans:300i|Hind|Josefin+Sans|Karla:400i|Merriweather+Sans:300|Muli:300,400|News+Cycle|Noto+Sans|Pavanam|Poppins:300,400|Quattrocento|Raleway|Roboto|Source+Sans+Pro|Ubuntu:300|Vollkorn);
+			@import url(https://fonts.googleapis.com/css?family=Playfair+Display:400,400italic,700|Cookie|Playball|Sail);
+		</style>
+
+	    <meta name="viewport" content="width=device-width; initial-scale=1.0;" />
+	    <link href="style.css" rel="stylesheet" media="screen" />
+  	</head>
+
+
+
+
+		<div id="top"> <!--this div must be outside body for styling-->
+	<body>
+			<nav>
+			    <a href="#top"> HOME</a>
+			    <a href="#second"> SKILLS </a>
+			    <a href="#experience"> EXPERIENCE</a>
+				<a href="#me"> ABOUT ME</a>
+		    </nav>
+
+			<header>
+				<h1> Hello World.  </h1>
+			</header>
+
+			<div class="name"> Machie Tabaru
+			</div>
+			<div class="pd"> Front/Back-End Developer
+			</div>
+			<div id="quote"> in the making...
+			</div>
 
         </div>
 
 
         <div id="second">
-        <div id="box">
-            <h2>Skills</h2>
-        </div>
+	        <div id="box">
+	            <h2>Skills</h2>
+	        </div>
 
-        <p id="firstword">  Java.</p>
-        <p>C.</p>
-        <p>Python.</p>
-        <p>JavaScript.</p>
-        <p>Android Programming.</p>
-        <p>HTML.</p>
-        <p>Photoshop.</p>
-        <p>InDesign.</p>
-        <p>Japanese.</p>
+	        <p id="firstword">  Java.</p>
+	        <p>C.</p>
+	        <p>Python.</p>
+	        <p>JavaScript.</p>
+	        <p>Android Programming.</p>
+	        <p>HTML/CSS.</p>
+	        <p>SQL.</p>
+	        <p>Photoshop/InDesign.</p>
+	        <p>Japanese.</p>
         </div>
 
         <div id="third">
-        <div class="fill">
-        </div>
-        <div class="clear">
-        </div>
-        <div class="fill">
-        </div>
-        <div class="clear">
-        </div>
-        <div class="fill">
-        </div>
+	        <div class="fill">
+	        </div>
+	        <div class="clear">
+	        </div>
+	        <div class="fill">
+	        </div>
+	        <div class="clear">
+	        </div>
+	        <div class="fill">
+	        </div>
         </div>
 
-        <div id="experience">
-        <div id="vox">
-        <p id="designWords">Experience</p>
-        </div>
-         <div id="space">
-         </div>
+       	<div id="experience">
+		    <div id="vox">
+    	    	<p id="designWords">Experience</p>
+		    </div>
+		    <div id="space">
+	        </div>
 
-         <div id="work" style="overflow-y: scroll; height:80%">
+	        <div id="work" style="overflow-y: scroll; height:80%">
 
-                 
-          <p class="jobTitle">Software Engineering Intern - Visa Inc </p>
-          <li>Optimized workflow by visualizing millions of live VISA transactional data through designing and
-          implementing a multi-layer calendar-view UI for a file conversion pipeline.</li>
-          <p class="tab"></p>
-          <li>Improved productivity by 12% by developing a tool that automates the parse through source files and retrieves the initialized value of specified attributes.
-          </li>
-          <p class="tab"></p>
-          <li>Integrated a configurations program that accessed variables and allotted changes to a program without having the need to interrupt the progress of the pipeline.</li>
+				<p class="jobTitle"> Software Engineering Intern - Visa Inc </p>
+					<li> Optimized workflow by visualizing millions of live VISA transactional data through designing and
+					implementing a multi-layer calendar-view UI for a file conversion pipeline. </li>
+					<p class="tab"></p>
+					<li> Improved productivity by 12% by developing a tool that automates the parse through source files and retrieves the initialized value of specified attributes .</li>
+					<p class="tab"></p>
+					<li> Integrated a configurations program that accessed variables and allotted changes to a program without having the need to interrupt the progress of the pipeline. </li>
 
-          <p class="jobTitle"> Digital Designer, Assistant - University of Miami</p>
-          <li>Designed posters and digital signage for newsletters and events for the University of Miami using
-          Photoshop and InDesign, and piloted signage designs from students.</li>
-
-        </div>
+				<p class="jobTitle"> Digital Designer, Assistant - University of Miami </p>
+				    <li>Designed posters and digital signage for newsletters and events for the University of Miami using Photoshop and InDesign, and piloted signage designs from students. </li>
+	        </div>
 
         </div>
 
         <div id="me">
-        <p id="speak"> Don't Speak Code?</p>
-        <p id="english"> I speak English too.</p>
+	        <p id="speak"> Don't Speak Code?</p>
+	        <p id="english"> I speak English too.</p>
 
 
-        <div id="bio">
-        <p> Hey! Thank you for stopping by.</p>
-        <p class="tab"> I'm Machie, a new graduate from the University of Miami with a Bachelor's in Computer Science with a minor in Math and Communications. When I'm not coding, I enjoy long walks on the beach, logic puzzles, travelling, and eating. </p><p class="tab"> 
-         I'm currently looking for software engineering opportunities that will help me excel as an engineer. As much as I love to be clammed up on a date with the trfiling software bug (...jokes, no one likes that! ...Although solving one is one of the most gratifying aspects in coding, amirite?) I love interacting with others. 
-        </p><p class="tab"> 
-         As trivial as that may sound, I hope to bring my communications skills into my career, and to help bridge any gaps in communication that we may have in this industry, to help make workflow run more efficiently.
-         </p>
-        </div>
-
-
+	        <div id="bio">
+		        <p> Hey! Thank you for stopping by.</p>
+		        <p class="tab"> I'm Machie, a graduate from the University of Miami with a Bachelor's in Computer Science with minors in Math and Communications. When I'm not coding, I enjoy long walks on the beach, logic puzzles, traveling, and eating. </p>
+		        <p class="tab">
+		         I'm currently looking for software engineering opportunities that will help me excel as an engineer. As much as I love to be clammed up on a date with the vexing software bug, (lol just kidding. who does? ... Although I do find that finally solving one AFTER it makes you question your whole entire existence, is one of the most gratifying aspects in coding and is what keeps you wanting more) I love and value my interactions with others. </p>
+		        <p class="tab">
+		         As trivial as that may sound, I hope to bring my interpersonal skills into my career, and to help bridge any gaps in communication that we may have in this industry, to help make workflow run more efficiently. </p>
+	        </div>
 
 
             <ul id="contact">
-              <li>Read me: <a id="cv" href="https://drive.google.com/open?id=1tIdhMwqf2xH1HJ6Aq0rX2BlePKVXFCEF">Résumé</a></li>
-              <li>Find me: &nbsp;Miami, FL</li>
-              <li>Reach me:&nbsp; m.tabaru@umiami.edu</li>
+             	<li>Read me: <a id="cv" href="https://drive.google.com/open?id=1tIdhMwqf2xH1HJ6Aq0rX2BlePKVXFCEF">Résumé</a></li>
+            	<li>Find me: &nbsp;Miami, FL</li>
+            	<li>Reach me:&nbsp; m(dot)tabaru(at)icloud(dot)com</li>
             </ul>
 
-
-
         </div>
-  </body>
 
+    </body>
 
 </html>
