changes to quote

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			</div>
 			<div class="pd"> Front/Back-End Developer
 			</div>
-			<div id="quote"> in the making...
+			<div id="quote">
 			</div>
 
         </div>
