comment added for quote

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 			</div>
 			<div class="pd"> Front/Back-End Developer
 			</div>
-			<div id="quote">
+			<div id="quote"> <!--no dramatic quote here for now, but
+			I am for hire :D !-->
 			</div>
 
         </div>
