work descript changes

--- a/index.html
+++ b/index.html
@@ -81,12 +81,11 @@
 	        <div id="work" style="overflow-y: scroll; height:80%">
 
 				<p class="jobTitle"> Software Engineering Intern - Visa Inc </p>
-					<li> Optimized workflow by visualizing millions of live VISA transactional data through designing and
-					implementing a multi-layer calendar-view UI for a file conversion pipeline. </li>
+					<li> Optimized workflow by visualizing millions of live VISA transactional data through implementing a newly designed multi-layer calendar UI for a file conversion pipeline. </li>
 					<p class="tab"></p>
-					<li> Improved productivity by 12% by developing a tool that automates the parse through source files and retrieves the initialized value of specified attributes .</li>
+					<li> Developed an automated tool to parse files that was previously processed manually, improving efficiency of workflow by 50%.</li>
 					<p class="tab"></p>
-					<li> Integrated a configurations program that accessed variables and allotted changes to a program without having the need to interrupt the progress of the pipeline. </li>
+					<li> Integrated a configurations program that accessed variables and allotted users to make changes to a program through a simple webpage. </li>
 
 				<p class="jobTitle"> Digital Designer, Assistant - University of Miami </p>
 				    <li>Designed posters and digital signage for newsletters and events for the University of Miami using Photoshop and InDesign, and piloted signage designs from students. </li>
