changes to background

--- a/index.html
+++ b/index.html
@@ -31,11 +31,12 @@
 				<h1> Hello World.  </h1>
 			</header>
 
-			<div class="name"> Machie Tabaru  
+			<div class="name"> Machie Tabaru
 			</div>
 			<div class="pd"> Front/Back-End Developer
 			</div>
-			<div id="quote"> in the making...
+			<div id="quote"> <!--no dramatic quote here for now, but
+			I am for hire :D !-->
 			</div>
 
         </div>
@@ -51,9 +52,9 @@
 	        <p>Python.</p>
 	        <p>JavaScript.</p>
 	        <p>Android Programming.</p>
-	        <p>HTML.</p>
-	        <p>Photoshop.</p>
-	        <p>InDesign.</p>
+	        <p>HTML/CSS.</p>
+	        <p>SQL.</p>
+	        <p>Photoshop/InDesign.</p>
 	        <p>Japanese.</p>
         </div>
 
@@ -74,18 +75,17 @@
 		    <div id="vox">
     	    	<p id="designWords">Experience</p>
 		    </div>
-		    <div id="space"> 
+		    <div id="space">
 	        </div>
 
 	        <div id="work" style="overflow-y: scroll; height:80%">
 
 				<p class="jobTitle"> Software Engineering Intern - Visa Inc </p>
-					<li> Optimized workflow by visualizing millions of live VISA transactional data through designing and
-					implementing a multi-layer calendar-view UI for a file conversion pipeline. </li>
+					<li> Optimized workflow by visualizing millions of live VISA transactional data through implementing a newly designed multi-layer calendar UI for a file conversion pipeline. </li>
 					<p class="tab"></p>
-					<li> Improved productivity by 12% by developing a tool that automates the parse through source files and retrieves the initialized value of specified attributes .</li>
+					<li> Developed an automated tool to parse files that was previously processed manually, improving efficiency of workflow by 50%.</li>
 					<p class="tab"></p>
-					<li> Integrated a configurations program that accessed variables and allotted changes to a program without having the need to interrupt the progress of the pipeline. </li>
+					<li> Integrated a configurations program that accessed variables and allotted users to make changes to a program through a simple webpage. </li>
 
 				<p class="jobTitle"> Digital Designer, Assistant - University of Miami </p>
 				    <li>Designed posters and digital signage for newsletters and events for the University of Miami using Photoshop and InDesign, and piloted signage designs from students. </li>
@@ -100,52 +100,18 @@
 
 	        <div id="bio">
 		        <p> Hey! Thank you for stopping by.</p>
-		        <p class="tab"> I'm Machie, a graduate from the University of Miami with a Bachelor's in Computer Science with minors in Math and Communications. When I'm not coding, I enjoy long walks on the beach, logic puzzles, travelling, and eating. </p>
-		        <p class="tab"> 
-		         I'm currently looking for software engineering opportunities that will help me excel as an engineer. As much as I love to be clammed up on a date with the  software bug (...jokes, no one likes that! ...Although solving one is one of the most gratifying aspects in coding, amirite?) I love interacting with others. </p>
-		        <p class="tab"> 
-		         As trivial as that may sound, I hope to bring my communications skills into my career, and to help bridge any gaps in communication that we may have in this industry, to help make workflow run more efficiently. </p>
+		        <p class="tab"> I'm Machie, a graduate from the University of Miami with a Bachelor's in Computer Science with minors in Math and Communications. When I'm not coding, I enjoy long walks on the beach, logic puzzles, traveling, and eating. </p>
+		        <p class="tab">
+		         I'm currently looking for software engineering opportunities that will help me excel as an engineer. As much as I love to be clammed up on a date with the vexing software bug, (lol just kidding. who does? ... Although I do find that finally solving one AFTER it makes you question your whole entire existence, is one of the most gratifying aspects in coding and is what keeps you wanting more) I love and value my interactions with others. </p>
+		        <p class="tab">
+		         As trivial as that may sound, I hope to bring my interpersonal skills into my career, and to help bridge any gaps in communication that we may have in this industry, to help make workflow run more efficiently. </p>
 	        </div>
-				<!-- rough edit
-					 I have experience primarily scripting with Python and working on web applications and have long-term goals of creating large-scale and interactive products with a diverse and passionate team.
-					psychology!
-				driven to produce elegant, efficient, and effective solutions to clients and customers
 
-				-concise code
-				-problem solving abilities and pattern recognition
-				My expertise is in Java development, 
-				critical-thinking, and a great team player/collaborator/
-				Specialty: Java Development, scalable front-end work, fearless approach in people skills,
-
-
-				I pride myself in communication skills, as that can determine how efficient and effortles/concise the workflow can be.
-	
-				The approach i liek to take when taking on jobs is to figure out the most i can about a task and what is related to it, even trivial details,
-				so i can best discover what code or approach i can take is best.
-				I am a firm believer in trying to eliminate potential problems from the get-go so there is less fixes that have to be done later.
-
-				As software is always in development, its important to keep in times with technology.
-				As a person who frequently bridges between Us and Japan, I see that Japan, althought it was booming in 90s with Sony being the flagship and coined "Japanese tech = quality," the progress of Japanese technology slowly progressed over time.
-				My theory of why this is, from psychological and sociological perspective, is because Japanese culture is heavily reliant on tradition and what's tried n true. Why reinvent the wheel when it works? is the thought in Japanese society. As honorable as this is, it hasn;t seemed to work in basis of technology. I find the User efficiency in japanese apps and websites are horrible structured, and way too complicated.
-				If you check out Yahoo! news Japan, which is the one of the top news media outlet in Japan, you will be surprised to see that the website will throw you back to the early 2000s, when AOL was still poppin, and would be unexpected from what was once the forefront of technology.
-
-				I find that to be a software engineer, we have to be a student first, and to never lose the spirit and interest in learning.
-				Like a software, "software is constantly in development or deprecated," we as the creators of software also must always have the spirit in being a student.
-
-					-->
-		        <!-- <div id="bio">
-		        <p> Hey! Thank you for stopping by.</p>
-		        <p class="tab"> I'm Machie, a new graduate from the University of Miami with a Bachelor's in Computer Science with a minor in Math and Communications. When I'm not coding, I enjoy long walks on the beach, logic puzzles, travelling, and eating. </p><p class="tab"> 
-		         I'm currently looking for software engineering opportunities that will help me excel as an engineer. As much as I love to be clammed up on a date with the trfiling software bug (...jokes, no one likes that! ...Although solving one is one of the most gratifying aspects in coding, amirite?) I love interacting with others. 
-		        </p><p class="tab"> 
-		         As trivial as that may sound, I hope to bring my communications skills into my career, and to help bridge any gaps in communication that we may have in this industry, to help make workflow run more efficiently.
-		         </p>
-		        </div>-->
 
             <ul id="contact">
              	<li>Read me: <a id="cv" href="https://drive.google.com/open?id=1tIdhMwqf2xH1HJ6Aq0rX2BlePKVXFCEF">Résumé</a></li>
             	<li>Find me: &nbsp;Miami, FL</li>
-            	<li>Reach me:&nbsp; m(dot)tabaru(at)outlook(dot)com</li>
+            	<li>Reach me:&nbsp; m(dot)tabaru(at)icloud(dot)com</li>
             </ul>
 
         </div>
