Update on email, location in contact box.
added back email and contact

--- a/index.html
+++ b/index.html
@@ -102,8 +102,10 @@
 
 
 	     	<ul id="contact">
+				<li>Find me: &nbsp; Chino Hills, CA.</li>
+				<li>Reach me:&nbsp; m(dot)tabaru(at)icloud(dot)com</li>
 			
-			</ul>
+		</ul>
 
 		</div>
 
