--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
 
 	     	<ul id="contact">
-				<li>Find me: &nbsp; Chino Hills, CA.</li>
+				<li>Find me: &nbsp; Los Angeles, CA.</li>
 				<li>Reach me:&nbsp; m(dot)tabaru(at)icloud(dot)com</li>
 			
 		</ul>
