--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 	<head>
 	    <meta charset="UTF-8"/>
-		<title>Machie Tabaru Portfolio</title>
+		<title>MT</title>
 
 		<style>
 			@import url(https://fonts.googleapis.com/css?family=Comfortaa:300|Domine|Fira+Sans:300i|Hind|Josefin+Sans|Karla:400i|Merriweather+Sans:300|Muli:300,400|News+Cycle|Noto+Sans|Pavanam|Poppins:300,400|Quattrocento|Raleway|Roboto|Source+Sans+Pro|Ubuntu:300|Vollkorn);
