--- a/StudioTahara/index.html
+++ b/StudioTahara/index.html
@@ -280,7 +280,7 @@ Menu
 </div>  
 
 -->
-<!--<div class="ttr_index_html_row3 row">
+<div class="ttr_index_html_row3 row">
 <div class="post_column col-lg-12 col-md-12 col-sm-12 col-xs-12">
 <div class="ttr_index_html_column30">
 <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
@@ -293,7 +293,7 @@ Menu
 <div class="post_column col-lg-4 col-md-6 col-sm-6 col-xs-12">
 <div class="ttr_index_html_column31">
 <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
-<div class="html_content"><h2 style="margin:0.14em 0em 0em 0em;line-height:1.57142857142857;"><span class="ttr_image" style="float:Left;overflow:hidden;margin:0em 0em 1.43em 0em;"><span><img class="ttr_uniform" style="max-height:300px;max-width:450px;" src="images/1803.jpg" /></span></span><span style="font-weight:500;font-size:1.286em;">Lorem ipsum dolor sit amet, test link</span><span style="font-weight:500;font-size:1.286em;">.</span></h2><h2 style="margin:0.71em 0em 0em 0em;line-height:1.97142857142857;"><span style="color:rgba(105,105,105,1);">A</span><span style="color:rgba(105,105,105,1);">dipiscing elit.Nullam dignissim convallis est.Quisque aliquam. Donec faucibus. Nunc iaculis suscipit dui.Nam sit amet sem. Aliquam libero nisi, imperdiet at, tincidunt nec, gravida vehicula</span><span style="color:rgba(105,105,105,1);">.</span></h2><h2 style="margin:0.71em 0em 0em 0em;line-height:1.97142857142857;"><span><a href="http://templatetoaster.com" target="_self" class="btn btn-md btn-default">Read More</a></span></h2></div>
+<div class="html_content"><h2 style="margin:0.14em 0em 0em 0em;line-height:1.57142857142857;"><span class="ttr_image" style="float:Left;overflow:hidden;margin:0em 0em 1.43em 0em;"><span><img class="ttr_uniform" style="max-height:300px;max-width:450px;" src="images/1803.jpg" /></span></span><span style="font-weight:500;font-size:1.286em;">いい写真とは？</span><span style="font-weight:500;font-size:1.286em;"></span></h2><h2 style="margin:0.71em 0em 0em 0em;line-height:1.97142857142857;"><span style="color:rgba(105,105,105,1);">A</span><span style="color:rgba(105,105,105,1);">先の世にも御契りや深かりけむ、世になく清らなる玉の男御子さへ生ま に、めづらかなる稚児の御容貌なり。 れたまひぬ。いつしかと心もとながらせたまひて、急ぎ参らせて御覧ずる 一の皇子は、</span><span style="color:rgba(105,105,105,1);"></span></h2><h2 style="margin:0.71em 0em 0em 0em;line-height:1.97142857142857;"><span><a href="" target="_self" class="btn btn-md btn-default">Read More</a></span></h2></div>
 <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
 <div style="clear:both;"></div>
 </div>
@@ -302,7 +302,9 @@ Menu
 <div class="post_column col-lg-4 col-md-6 col-sm-6 col-xs-12">
 <div class="ttr_index_html_column32">
 <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
-<div class="html_content"><p><span class="ttr_image" style="float:Left;overflow:hidden;margin:0em 0em 1.43em 0em;"><span style="line-height:1.57142857142857;"><img class="ttr_uniform" style="max-height:300px;max-width:450px;" src="images/1804.jpg" /></span></span></p><p style="margin:0.14em 0em 0em 0em;line-height:1.57142857142857;"><span style="font-weight:500;font-size:1.286em;">Lorem ipsum dolor sit amet, test link</span><span style="font-weight:500;font-size:1.286em;">.</span></p><p style="margin:0.71em 0em 0em 0em;line-height:1.97142857142857;"><span style="color:rgba(105,105,105,1);">A</span><span style="color:rgba(105,105,105,1);">dipiscing elit.Nullam dignissim convallis est.Quisque aliquam. Donec faucibus. Nunc iaculis suscipit dui.Nam sit amet sem. Aliquam libero nisi, imperdiet at, tincidunt nec, gravida vehicula</span><span style="color:rgba(105,105,105,1);">.</span></p><p style="margin:0.71em 0em 0em 0em;line-height:1.97142857142857;"><span><a href="http://templatetoaster.com" target="_self" class="btn btn-md btn-default">Read More</a></span></p></div>
+<div class="html_content"><p><span class="ttr_image" style="float:Left;overflow:hidden;margin:0em 0em 1.43em 0em;"><span style="line-height:1.57142857142857;"><img class="ttr_uniform" style="max-height:300px;max-width:450px;" src="images/oceana2.jpg" /></span></span></p><p style="margin:0.14em 0em 0em 0em;line-height:1.57142857142857;"><span style="font-weight:500;font-size:1.286em;">
+写真家必要アイテムトップ５
+</span><span style="font-weight:500;font-size:1.286em;"></span></p><p style="margin:0.71em 0em 0em 0em;line-height:1.97142857142857;"><span style="color:rgba(105,105,105,1);">A</span><span style="color:rgba(105,105,105,1);"> れたまひぬ。いつしかと心もとながらせたまひて、急ぎ参らせて御覧ずる 一の皇子は、右大臣の女御の御腹にて、寄せ重く、疑ひなき儲の君と、世 かしづきたまふこと限りなし。 ければ、おほかたのやむごとなき御思ひにて、この君をば、私物に思ほし</span><span style="color:rgba(105,105,105,1);"></span></p><p style="margin:0.71em 0em 0em 0em;line-height:1.97142857142857;"><span><a href="" target="_self" class="btn btn-md btn-default">Read More</a></span></p></div>
 <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
 <div style="clear:both;"></div>
 </div>
@@ -311,13 +313,14 @@ Menu
 <div class="post_column col-lg-4 col-md-6 col-sm-6 col-xs-12">
 <div class="ttr_index_html_column33">
 <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
-<div class="html_content"><p><span class="ttr_image" style="float:Left;overflow:hidden;margin:0em 0em 1.43em 0em;"><span><img class="ttr_uniform" style="max-height:300px;max-width:450px;" src="images/1805.jpg" /></span></span></p><p style="margin:0.14em 0em 0em 0em;line-height:1.57142857142857;"><span style="font-weight:500;font-size:1.286em;">Lorem ipsum dolor sit amet, test link</span><span style="font-weight:500;font-size:1.286em;">.</span></p><p style="margin:0.71em 0em 0em 0em;line-height:1.97142857142857;"><span style="color:rgba(105,105,105,1);">A</span><span style="color:rgba(105,105,105,1);">dipiscing elit.Nullam dignissim convallis est.Quisque aliquam. Donec faucibus. Nunc iaculis suscipit dui.Nam sit amet sem. Aliquam libero nisi, imperdiet at, tincidunt nec, gravida vehicula</span><span style="color:rgba(105,105,105,1);">.</span></p><p style="margin:0.71em 0em 0em 0em;line-height:1.97142857142857;"><span><a href="http://templatetoaster.com" target="_self" class="btn btn-md btn-default">Read More</a></span></p></div>
+<div class="html_content"><p><span class="ttr_image" style="float:Left;overflow:hidden;margin:0em 0em 1.43em 0em;"><span><img class="ttr_uniform" style="max-height:300px;max-width:450px;" src="images/1805.jpg" /></span></span></p><p style="margin:0.14em 0em 0em 0em;line-height:1.57142857142857;"><span style="font-weight:500;font-size:1.286em;">Editor's voice
+</span><span style="font-weight:500;font-size:1.286em;"></span></p><p style="margin:0.71em 0em 0em 0em;line-height:1.97142857142857;"><span style="color:rgba(105,105,105,1);">A</span><span style="color:rgba(105,105,105,1);">dipiscing elit.Nullam dignissim convallis est.Quisque aliquam. Donec faucibus. Nunc iaculis suscipit dui.Nam sit amet sem. Aliquam libero nisi, imperdiet at, tincidunt nec, gravida vehicula</span><span style="color:rgba(105,105,105,1);">.</span></p><p style="margin:0.71em 0em 0em 0em;line-height:1.97142857142857;"><span><a href="" target="_self" class="btn btn-md btn-default">Read More</a></span></p></div>
 <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
 <div style="clear:both;"></div>
 </div>
 </div>
 <div class=" visible-lg-block visible-xs-block" style="clear: both;"></div>
-</div>-->
+</div>
 <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
 </div><!--content_margin-->
 </div><!--content-->
@@ -325,18 +328,21 @@ Menu
 </div>
 </div><!--container-->
 </div><!--page-->
-<div style="height:0px;width:0px;overflow:hidden;"></div>
-<footer id="ttr_footer">
-<div class="ttr_footer_bottom_footer">
-
-
-<div id="ttr_footer_designed_by_links">
-<a href="http://tabarudev.net" target="_self" >
-Website
-</a>
-<span id="ttr_footer_designed_by">
-made by Machie Tabaru 2020
-</span>
+   <div style="height:0px;width:0px;overflow:hidden;"></div>
+   <footer id="ttr_footer">
+   <div class="ttr_footer_bottom_footer">
+   <div class="ttr_footer_bottom_footer_inner">
+   <div class="ttr_footer_element_alignment container">
+   </div>
+   <div class="footerforeground0" data-effect="None" data-begintime="0" data-duration="1" data-easing="linear" data-slide="None">
+   </div>
+   <div id="ttr_footer_designed_by_links">
+   <a href="http://tabarudev.net" target="_self" >
+   Website
+   </a>
+   <span id="ttr_footer_designed_by">
+   Designed by Machie Tabaru
+   </span>
 </div>
 
 </div>
