--- a/StudioTahara/index.html
+++ b/StudioTahara/index.html
@@ -131,7 +131,7 @@ Menu
 <div class="post_column col-lg-12 col-md-12 col-sm-12 col-xs-12">
 <div class="ttr_index_html_column00">
 <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
-<div class="html_content"><p style="text-align:Center;line-height:1.49142857142857;"><span style="font-weight:500;font-size:2.571em;">スタジオTahara へようこそ</span></p></div>
+<div class="html_content"><p style="text-align:Center;line-height:1.49142857142857;"><span style="font-weight:500;font-size:2.571em;">Welcome to Studio Tahara</span></p></div>
 <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
 <div style="clear:both;"></div>
 </div>
@@ -176,7 +176,7 @@ Menu
 <div class="post_column col-lg-6 col-md-6 col-sm-6 col-xs-12">
 <div class="ttr_index_html_column11">
 <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
-<div class="html_content"><p><span class="ttr_image" style="float:Left;overflow:hidden;margin:0em 0em 0em 0em;"><span><img class="ttr_uniform" style="max-height:450px;max-width:800px;" src="images/1793.jpg" /></span></span></p></div>
+<div class="html_content"><p><span class="ttr_image" style="float:Left;overflow:hidden;margin:0em 0em 0em 0em;"><span><img class="ttr_uniform" style="max-height:450px;max-width:800px;" src="images/1816.jpg" /></span></span></p></div>
 <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
 <div style="clear:both;"></div>
 </div>
@@ -223,7 +223,7 @@ Menu
 <div class="post_column col-lg-6 col-md-6 col-sm-6 col-xs-12">
 <div class="ttr_index_html_column16">
 <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
-<div class="html_content"><p><span class="ttr_image" style="float:Left;overflow:hidden;margin:0em 0em 0em 0em;"><span><img class="ttr_uniform" style="max-height:450px;max-width:800px;" src="images/1798.jpg" /></span></span></p></div>
+<div class="html_content"><p><span class="ttr_image" style="float:Left;overflow:hidden;margin:0em 0em 0em 0em;"><span><img class="ttr_uniform" style="max-height:450px;max-width:800px;" src="images/1821.jpg" /></span></span></p></div>
 <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
 <div style="clear:both;"></div>
 </div>
