changes in index

--- a/StudioTahara/index.html
+++ b/StudioTahara/index.html
@@ -140,23 +140,7 @@ Menu
 <div class="post_column col-lg-12 col-md-12 col-sm-12 col-xs-12">
 <div class="ttr_index_html_column01">
 <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
-<div class="html_content"><p style="margin:0.14em 0em 0em 0.57em;text-align:Center;line-height:1.99142857142857;"><span style="color:rgba(105,105,105,1);">いづれの御時にか、女御、更衣あまたさぶらひたまひけるなかに、いと
-   やむごとなき際にはあらぬが、すぐれて時めきたまふありけり。
-   はじめより我はと思ひ上がりたまへる御方がた、めざましきものにおと
-   のためしにもなりぬべき御もてなしなり。
-   あかずあはれなるものに思ほして、人のそしりをもえ憚らせたまはず、世
-   やありけむ、いと篤しくなりゆき、もの心細げに里がちなるを、いよいよ
-   ず。朝夕の宮仕へにつけても、人の心をのみ動かし、恨みを負ふ積もりに
-   しめ嫉みたまふ。同じほど、それより下臈の更衣たちは、ましてやすから
-   上達部、上人なども、あいなく目を側めつつ、 「いとまばゆき人の御おぼ
-   なき御心ばへのたぐひなきを頼みにてまじらひたまふ。
-   例も引き出でつべくなりゆくに、いとはしたなきこと多かれど、かたじけ
-   やうやう天の下にもあぢきなう、人のもてなやみぐさになりて、楊貴妃の
-   えなり。唐土にも、かかる事の起こりにこそ、世も乱れ、悪しかりけれ」と、
-   父の大納言は亡くなりて、母北の方なむいにしへの人のよしあるにて、親
-   後見しなければ、事ある時は、なほ拠り所なく心細げなり。
-   ず、なにごとの儀式をももてなしたまひけれど、とりたててはかばかしき
-   うち具し、さしあたりて世のおぼえはなやかなる御方がたにもいたう劣ら</span></p></div>
+<div class="html_content"><p style="margin:0.14em 0em 0em 0.57em;text-align:Center;line-height:1.99142857142857;"><span style="color:rgba(105,105,105,1);">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vivamus at augue eget arcu dictum varius duis. Massa tincidunt dui ut ornare lectus sit. Sit amet volutpat consequat mauris nunc congue nisi vitae suscipit. Bibendum est ultricies integer quis auctor elit sed vulputate mi. Vestibulum lorem sed risus ultricies tristique nulla aliquet. Egestas sed sed risus pretium quam. Nunc non blandit massa enim nec dui nunc mattis. Nulla pellentesque dignissim enim sit amet. Consequat id porta nibh venenatis cras sed. Enim nec dui nunc mattis. Pharetra convallis posuere morbi leo urna. Enim nulla aliquet porttitor lacus luctus accumsan tortor. Sit amet risus nullam eget felis eget. Et netus et malesuada fames ac turpis egestas integer. Scelerisque eu ultrices vitae auctor eu augue ut lectus. Magna etiam tempor orci eu lobortis elementum. Maecenas accumsan lacus vel facilisis volutpat est. Eget arcu dictum varius duis at consectetur lorem.</span></p></div>
 <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
 <div style="clear:both;"></div>
 </div>
@@ -167,7 +151,7 @@ Menu
 <div class="post_column col-lg-12 col-md-12 col-sm-12 col-xs-12">
 <div class="ttr_index_html_column10">
 <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
-<div class="html_content"><p style="text-align:Center;"><span style="font-weight:500;font-size:2.571em;">最新の作品</span></p></div>
+<div class="html_content"><p style="text-align:Center;"><span style="font-weight:500;font-size:2.571em;">Latest Artwork</span></p></div>
 <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
 <div style="clear:both;"></div>
 </div>
@@ -302,9 +286,9 @@ Menu
 <div class="post_column col-lg-4 col-md-6 col-sm-6 col-xs-12">
 <div class="ttr_index_html_column32">
 <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
-<div class="html_content"><p><span class="ttr_image" style="float:Left;overflow:hidden;margin:0em 0em 1.43em 0em;"><span style="line-height:1.57142857142857;"><img class="ttr_uniform" style="max-height:300px;max-width:450px;" src="images/oceana2.jpg" /></span></span></p><p style="margin:0.14em 0em 0em 0em;line-height:1.57142857142857;"><span style="font-weight:500;font-size:1.286em;">
+<div class="html_content"><p><span class="ttr_image" style="float:Left;overflow:hidden;margin:0em 0em 1.43em 0em;"><span style="line-height:1.57142857142857;"><img class="ttr_uniform" style="max-height:300px;max-width:450px;" src="images/oceana.jpg" /></span></span></p><p style="margin:0.14em 0em 0em 0em;line-height:1.57142857142857;"><span style="font-weight:500;font-size:1.286em;">
 写真家必要アイテムトップ５
-</span><span style="font-weight:500;font-size:1.286em;"></span></p><p style="margin:0.71em 0em 0em 0em;line-height:1.97142857142857;"><span style="color:rgba(105,105,105,1);"></span><span style="color:rgba(105,105,105,1);"> いつしかと心もとながらせたまひて、急ぎ参らせて御覧ずる 一の皇子は、右大臣の女御の御腹にて、寄せ重く、疑ひなき儲の君と、世 かしづきたまふこと限りなし。 ければ、おほかたのやむごとなき御思ひにて、この君をば、私物に思ほし</span><span style="color:rgba(105,105,105,1);"></span></p><p style="margin:0.71em 0em 0em 0em;line-height:1.97142857142857;"><span><a href="" target="_self" class="btn btn-md btn-default">Read More</a></span></p></div>
+</span><span style="font-weight:500;font-size:1.286em;"></span></p><p style="margin:0.71em 0em 0em 0em;line-height:1.97142857142857;"><span style="color:rgba(105,105,105,1);"></span><span style="color:rgba(105,105,105,1);">いつしかと心もとながらせたまひて、急ぎ参らせて御覧ずる 一の皇子は、右大臣の女御の御腹にて、寄せ重く、疑ひなき儲の君と、世 かしづきたまふこと限りなし。 ければ、おほかたのやむごとなき御思ひにて、この君をば、私物に思ほし</span><span style="color:rgba(105,105,105,1);"></span></p><p style="margin:0.71em 0em 0em 0em;line-height:1.97142857142857;"><span><a href="" target="_self" class="btn btn-md btn-default">Read More</a></span></p></div>
 <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
 <div style="clear:both;"></div>
 </div>
