--- a/StudioTahara/new-page.html
+++ b/StudioTahara/new-page.html
@@ -71,10 +71,10 @@ Menu
 <li class="ttr_menu_items_parent dropdown"><a href="index.html" class="ttr_menu_items_parent_link"><span class="menuchildicon"></span>Home</a>
 <hr class ="horiz_separator"/>
 </li> <!-- main menu list closing -->
-<li class="ttr_menu_items_parent dropdown"><a href="about-us.html" class="ttr_menu_items_parent_link"><span class="menuchildicon"></span>紹介</a>
+<li class="ttr_menu_items_parent dropdown"><a href="about-us.html" class="ttr_menu_items_parent_link"><span class="menuchildicon"></span>Our Team</a>
 <hr class ="horiz_separator"/>
 </li> <!-- main menu list closing -->
-<li class="ttr_menu_items_parent dropdown active"><a href="new-page.html" class="ttr_menu_items_parent_link_active"><span class="menuchildicon"></span>ギャラリー</a>
+<li class="ttr_menu_items_parent dropdown active"><a href="new-page.html" class="ttr_menu_items_parent_link_active"><span class="menuchildicon"></span>Gallery</a>
 <hr class ="horiz_separator"/>
 </li> <!-- main menu list closing -->
 <li class="ttr_menu_items_parent dropdown"><a href="contact.html" class="ttr_menu_items_parent_link"><span class="menuchildicon"></span>お問い合わせ</a>
@@ -94,7 +94,7 @@ Menu
 <div class="post_column col-lg-12 col-md-12 col-sm-12 col-xs-12">
 <div class="ttr_new-page_html_column00">
 <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
-<div class="html_content"><p style="text-align:Center;line-height:1.57142857142857;"><span style="font-weight:500;font-size:2.571em;">作品集</span></p></div>
+<div class="html_content"><p style="text-align:Center;line-height:1.57142857142857;"><span style="font-weight:500;font-size:2.571em;">Gallery</span></p></div>
 <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
 <div style="clear:both;"></div>
 </div>
