--- a/StudioTahara/contact.html
+++ b/StudioTahara/contact.html
@@ -71,10 +71,10 @@ Menu
 <li class="ttr_menu_items_parent dropdown"><a href="index.html" class="ttr_menu_items_parent_link"><span class="menuchildicon"></span>Home</a>
 <hr class ="horiz_separator"/>
 </li> <!-- main menu list closing -->
-<li class="ttr_menu_items_parent dropdown"><a href="about-us.html" class="ttr_menu_items_parent_link"><span class="menuchildicon"></span>紹介</a>
+<li class="ttr_menu_items_parent dropdown"><a href="about-us.html" class="ttr_menu_items_parent_link"><span class="menuchildicon"></span>Our Team</a>
 <hr class ="horiz_separator"/>
 </li> <!-- main menu list closing -->
-<li class="ttr_menu_items_parent dropdown"><a href="new-page.html" class="ttr_menu_items_parent_link"><span class="menuchildicon"></span>ギャラリー</a>
+<li class="ttr_menu_items_parent dropdown"><a href="new-page.html" class="ttr_menu_items_parent_link"><span class="menuchildicon"></span>Gallery</a>
 <hr class ="horiz_separator"/>
 </li> <!-- main menu list closing -->
 <li class="ttr_menu_items_parent dropdown active"><a href="contact.html" class="ttr_menu_items_parent_link_active"><span class="menuchildicon"></span>お問い合わせ</a>
