--- a/StudioTahara/index.html
+++ b/StudioTahara/index.html
@@ -79,7 +79,7 @@ Menu
 <li class="ttr_menu_items_parent dropdown"><a href="new-page.html" class="ttr_menu_items_parent_link"><span class="menuchildicon"></span>Gallery</a>
 <hr class ="horiz_separator"/>
 </li> <!-- main menu list closing -->
-<li class="ttr_menu_items_parent dropdown"><a href="contact.html" class="ttr_menu_items_parent_link"><span class="menuchildicon"></span>お問い合わせ</a>
+<li class="ttr_menu_items_parent dropdown"><a href="contact.html" class="ttr_menu_items_parent_link"><span class="menuchildicon"></span>Contact</a>
 </li> <!-- main menu list closing -->
 </ul>
 </div>
@@ -268,7 +268,7 @@ Menu
 <div class="post_column col-lg-12 col-md-12 col-sm-12 col-xs-12">
 <div class="ttr_index_html_column30">
 <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
-<div class="html_content"><p style="text-align:Center;line-height:1.57142857142857;"><span style="font-weight:500;font-size:2.571em;">最新のBlog</span></p></div>
+<div class="html_content"><p style="text-align:Center;line-height:1.57142857142857;"><span style="font-weight:500;font-size:2.571em;">Check Out Our Blog</span></p></div>
 <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
 <div style="clear:both;"></div>
 </div>
