--- a/StudioTahara/new-page.html
+++ b/StudioTahara/new-page.html
@@ -77,7 +77,7 @@ Menu
 <li class="ttr_menu_items_parent dropdown active"><a href="new-page.html" class="ttr_menu_items_parent_link_active"><span class="menuchildicon"></span>Gallery</a>
 <hr class ="horiz_separator"/>
 </li> <!-- main menu list closing -->
-<li class="ttr_menu_items_parent dropdown"><a href="contact.html" class="ttr_menu_items_parent_link"><span class="menuchildicon"></span>お問い合わせ</a>
+<li class="ttr_menu_items_parent dropdown"><a href="contact.html" class="ttr_menu_items_parent_link"><span class="menuchildicon"></span>Contact</a>
 </li> <!-- main menu list closing -->
 </ul>
 </div>
