changes to about us

--- a/StudioTahara/about-us.html
+++ b/StudioTahara/about-us.html
@@ -126,7 +126,7 @@ Menu
 <div class="post_column col-lg-12 col-md-12 col-sm-12 col-xs-12">
 <div class="ttr_about-us_html_column10">
 <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
-<div class="html_content"><p style="margin:0.36em 0em 0.36em 0em;text-align:Center;"><span style="font-weight:500;font-size:2.571em;">チームの紹介</span></p></div>
+<div class="html_content"><p style="margin:0.36em 0em 0.36em 0em;text-align:Center;"><span style="font-weight:500;font-size:2.571em;">Our Team</span></p></div>
 <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
 <div style="clear:both;"></div>
 </div>
